[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/Necromancer_walk_1.png" type="Texture" id=2]
[ext_resource path="res://entities/aoe_marker/aoe_marker.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/hp_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/player/Necromancer_walk_0.png" type="Texture" id=5]
[ext_resource path="res://entities/player/Necromancer_idle_0.png" type="Texture" id=6]
[ext_resource path="res://ui/skills/call_timer.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/skills/revive_timer.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.88501
height = 7.55551

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.321, 1.924 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 153.467, 89.6248 )
collision_layer = 2
collision_mask = 63
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite_anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.139, 2.433 )
shape = SubResource( 2 )

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="aoe_marker" parent="." instance=ExtResource( 3 )]

[node name="hp_bar" parent="." instance=ExtResource( 4 )]
position = Vector2( -13.463, -14.568 )
scale = Vector2( 0.427, 0.251 )

[node name="ui_canvas" type="CanvasLayer" parent="."]

[node name="call_timer" parent="ui_canvas" instance=ExtResource( 7 )]
position = Vector2( 18, 1 )

[node name="revive_timer" parent="ui_canvas" instance=ExtResource( 8 )]
position = Vector2( 1, 1 )

[node name="pit_collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="shape" type="CollisionShape2D" parent="pit_collider"]
position = Vector2( 0.071, 3.408 )
shape = SubResource( 3 )
[connection signal="body_entered" from="pit_collider" to="." method="_on_pit_collider_body_entered"]
